@@ -603,7 +603,9 @@ OPENCL_FORCE_NOT_INLINE void DirectHitFiniteLight(
 					fabs(dot(VLOAD3F(&bsdf->hitPoint.fixedDir.x), VLOAD3F(&bsdf->hitPoint.shadeN.x))));
 
 			// MIS between BSDF sampling and direct light sampling
-			weight = PowerHeuristic(lastPdfW, directPdfW * lightPickProb);
+			//
+			// Note: mats[bsdf->materialIndex].avgPassThroughTransparency = lightSource->GetAvgPassThroughTransparency()
+			weight = PowerHeuristic(lastPdfW * Light_GetAvgPassThroughTransparency(light LIGHTS_PARAM), directPdfW * lightPickProb);
 		}
 
 		SampleResult_AddEmission(sampleResult, BSDF_GetLightID(bsdf
@@ -732,10 +734,14 @@ OPENCL_FORCE_NOT_INLINE bool DirectLight_BSDFSampling(
 	// Russian Roulette
 	bsdfPdfW *= (PathDepthInfo_GetRRDepth(tmpDepthInfo) >= PARAM_RR_DEPTH) ? RussianRouletteProb(bsdfEval) : 1.f;
 	
+	// Account for material transparency
+	__global const LightSource* restrict light = &lights[info->lightIndex];
+	bsdfPdfW *= Light_GetAvgPassThroughTransparency(light
+			LIGHTS_PARAM);
+	
 	// MIS between direct light sampling and BSDF sampling
 	//
 	// Note: I have to avoiding MIS on the last path vertex
-	__global const LightSource* restrict light = &lights[info->lightIndex];
 
 	const bool misEnabled = !lastPathVertex &&
 			Light_IsEnvOrIntersectable(light) &&
