@@ -58,6 +58,9 @@ public:
 	}
 
 	virtual luxrays::Properties ToProperties(const ImageMapCache &imgMapCache, const bool useRealFileName) const;
+
+protected:
+	virtual void UpdateAvgPassThroughTransparency();
 };
 
 }
